--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -506,7 +506,7 @@ en:
               blank: Enter the phone number
               invalid: *phone_numeric_error
             fax_number:
-              invalid: *phone_numeric_error
+              invalid: Enter a fax number in the correct format, like 07700 900 982
             dx_number:
               invalid: Enter a valid DX number
         steps/applicant/names_split_form:
