--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -91,7 +91,7 @@ en:
       attending_court: Attending court
       help_with_fees: Help with fees
       payment: How will you pay the application fee?
-      submission: How will you submit your application to court?
+      submission: Submitting your application to court
       solicitor_details: Details of legal representative
     groups:
       abduction_passport_possession: Details of the children’s passports
@@ -117,7 +117,7 @@ en:
       special_arrangements: Do you or the children need specific safety arrangements at court?
       help_with_fees: Do you have a ‘Help with fees’ reference number?
       payment_type: Payment type
-      submission_type: Submission type
+      submission_type: Email for application to court confirmation
       solicitor_contact_details: Your solicitor’s contact details
       solicitor_personal_details: Your solicitor’s personal details
       solicitor_address_details: Your solicitor’s address details
@@ -719,14 +719,11 @@ en:
         help_with_fees: Help with fees
         solicitor: Through a solicitor’s fee account
         self_payment_card: Over the phone
-        self_payment_cheque: By cheque or cash
     submission_type:
       question: ''
-      answers:
-        online: Electronically
-        print_and_post: Print and post
     submission_receipt_email:
-      question: 'A confirmation email will be sent to:'
+      question: ''
+      absence_answer: None selected
     has_solicitor:
       question: Do you have a solicitor?
       answers:
