RST-5483 Added validation on cya for file

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -123,6 +123,10 @@ en:
               blank: You must add at least one respondent
             payment_type:
               blank: You must select a payment method
+            files_collection_ref:
+              blank: You must choose a file to upload
+            consent_order:
+              blank: You must choose a file to upload
 
   activemodel:
     errors:
