--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -150,10 +150,6 @@ en:
         <<: *YESNO
     miam_certificate:
       question: MIAM certificate
-    miam_mediator_exemption:
-      question: Has a mediator confirmed that you do not need to attend a MIAM?
-      answers:
-        <<: *YESNO
     miam_exemption_claim:
       question: Do you have a valid reason for not attending a MIAM?
       answers:
@@ -248,35 +244,35 @@ en:
       question_a11y: Who %{child_name} lives with
 
     miam_exemptions_domestic:
-      question: Domestic abuse and violence
+      question: Domestic abuse
       answers:
-        police_arrested: Evidence that a prospective party has been arrested for a relevant domestic violence offence
-        police_caution: Evidence of a relevant police caution for a domestic violence offence
-        police_ongoing_proceedings: Evidence of relevant criminal proceedings for a domestic violence offence which have not concluded
-        police_conviction: Evidence of a relevant conviction for a domestic violence offence
+        police_arrested: Evidence that a prospective party has been arrested for a relevant domestic abuse offence
+        police_caution: Evidence of a relevant police caution for a domestic abuse offence
+        police_ongoing_proceedings: Evidence of relevant criminal proceedings for a domestic abuse offence which have not concluded
+        police_conviction: Evidence of a relevant conviction for a domestic abuse offence
         police_dvpn: A domestic violence protection notice issued under section 24 of the Crime and Security Act 2010 against a prospective party
-        court_bound_over: A court order binding a prospective party over in connection with a domestic violence offence
+        court_bound_over: A court order binding a prospective party over in connection with a domestic abuse offence
         court_protective_injunction: A relevant protective injunction
-        court_undertaking: An undertaking given in England and Wales under section 46 or 63E of the Family Law Act 1996 (or given in Scotland or Northern Ireland in place of a protective injunction) by a prospective party, provided that a cross-undertaking relating to domestic violence was not given by another prospective party
+        court_undertaking: An undertaking given in England and Wales under section 46 or 63E of the Family Law Act 1996 (or given in Scotland or Northern Ireland in place of a protective injunction) by a prospective party, provided that a cross-undertaking relating to domestic violence or abuse was not given by another prospective party
         court_finding_of_fact: A copy of a finding of fact, made in proceedings in the United Kingdom, that there has been domestic violence by a prospective party
         court_expert_report: An expert report produced as evidence in proceedings in the United Kingdom for the benefit of a court or tribunal confirming that a person with whom a prospective party is or was in a family relationship, was assessed as being, or at risk of being, a victim of domestic violence by that prospective party
         specialist_examination: A letter or report from an appropriate health professional confirming an examination
         specialist_referral: A letter or report from an appropriate health professional confirming a referral
-        local_authority_marac: A letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is in a family relationship, is or has been at risk of harm from domestic violence by another prospective party
+        local_authority_marac: A letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is personally connected, is or has been at risk of harm from domestic abuse by another prospective party
         local_authority_la_ha: A letter from an officer employed by a local authority or housing association
-        local_authority_public_authority: A letter from a public authority confirming that a person with whom a prospective party is or was in a family relationship, was assessed as being, or at risk of being, a victim of domestic violence by that prospective party (or a copy of that assessment)
-        da_service_idva: A letter from an independent domestic violence advisor confirming that they are providing support to a prospective party
-        da_service_isva: A letter from an independent sexual violence advisor confirming that they are providing support to a prospective party relating to sexual violence by another prospective party
-        da_service_organisation: A letter from an organisation providing domestic violence support services, or a registered charity, confirming that it provided a prospective party with support in relation to that person’s needs as a victim, or a person at risk, of domestic violence
-        da_service_refuge_refusal: A letter or report from an organisation providing domestic violence support services in the UK confirming that a person with whom a prospective party is or was in a family relationship was refused admission to a refuge, the date on which they were refused admission to the refuge, and they sought admission to the refuge because of allegations of domestic violence by the prospective party
-        misc_right_to_remain: You or any of the other people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic violence or abuse
-        misc_financial_abuse: You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
+        local_authority_public_authority: A letter from a public authority confirming that a person with whom a prospective party is or was personally connected, was assessed as being, or at risk of being, a victim of domestic abuse by that prospective party (or a copy of that assessment)
+        da_service_idva: A letter from an independent domestic violence advisor (IDVA) confirming that they are providing or have provided support to a prospective party
+        da_service_isva: A letter from an independent sexual violence advisor (ISVA) confirming that they are providing or have provided support to a prospective party relating to sexual violence by another prospective party
+        da_service_organisation: A letter from an organisation providing domestic violence support services, confirming that it provided a prospective party with support in relation to that person’s needs as a victim, or a person at risk, of domestic violence
+        da_service_refuge_refusal: A letter or report from an organisation providing domestic violence support services in the UK confirming that a person with whom a prospective party is or was personally connected was refused admission to a refuge, the date on which they were refused admission to the refuge, and they sought admission to the refuge because of allegations of domestic violence by the prospective party
+        misc_right_to_remain: The prospective applicant or any of the other people in this application (the respondents) have been granted indefinite leave to remain in the UK as a victim of domestic abuse
+        misc_financial_abuse: You have evidence that the prospective applicant or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
         misc_domestic_none: *none_selected
 
     miam_exemptions_protection:
       question: Child protection concerns
       answers:
-        misc_authority_enquiring: A local authority is carrying out enquiries or assessment about any of the children in this application, or other child in the household
+        misc_authority_enquiring: A local authority is carrying out enquiries under Section 47 of the Children Act 1989 or assessment about any of the children in this application, or other child in the household
         misc_authority_protection_order: Any of the children in this application, or other child in the household, is the subject of a child protection plan
         misc_protection_none: *none_selected
 
@@ -284,7 +280,7 @@ en:
       question: Urgency reasons
       answers:
         misc_risk_applicant: There is risk to the life, liberty or physical safety of you, your family or your home
-        misc_unreasonable_hardship: Any delay caused by attending a MIAM would cause unreasonable hardship for you
+        misc_unreasonable_hardship: Any delay caused by attending a MIAM would cause significant financial hardship to the prospective applicant
         misc_risk_children: Any delay caused by attending a MIAM would cause a risk of harm to the children
         misc_risk_unlawful_removal_retention: Any delay caused by attending a MIAM would cause a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales
         misc_miscarriage_justice: Any delay caused by attending a MIAM would cause a significant risk of a miscarriage of justice
@@ -295,23 +291,18 @@ en:
     miam_exemptions_adr:
       question: Previous MIAM attendance or MIAM exemption
       answers:
-        misc_previous_attendance: In the 4 months prior to making the application, the person attended a MIAM or participated in another form of non-court dispute resolution relating to the same or a very similar dispute
-        misc_ongoing_attendance: At the time of making the application, the person is participating in another form of non-court dispute resolution relating to the same or substantially the same dispute
+        misc_previous_attendance: In the 4 months prior to making the application, the person attended a MIAM or a non-court dispute resolution process relating to the same or substantially the same dispute; and where the applicant attended a non-court dispute resolution process, there is evidence of that attendance in the form of written confirmation from the dispute resolution provider.
         misc_existing_proceedings_attendance: The application would be made in existing proceedings which are continuing and the prospective applicant attended a MIAM before initiating those proceedings
-        misc_previous_exemption: In the 4 months prior to making the application, the person filed a relevant family application confirming that a MIAM exemption applied and that application related to the same or substantially the same dispute
-        misc_existing_proceedings_exemption: The application would be made in existing proceedings which are continuing and a MIAM exemption applied to the application for those proceedings
+        misc_existing_proceedings_exemption: The application would be made in existing proceedings which are continuing and the prospective applicant attended a MIAM before initiating those proceedings. The MIAM provider must sign a document proving this attendance, to be submitted alongside your application to court
         misc_adr_none: *none_selected
 
     miam_exemptions_misc:
       question: Other exemptions
       answers:
-        misc_no_respondent_address: You don’t have sufficient contact details for the other people in this application (the respondents)
         misc_without_notice: You’re applying for a without notice hearing
         miam_access_disabled_facilities: You or the other person has a disability and the mediator doesn’t have disabled facilities
         miam_access_appointment: You or the other person has contacted 3 mediators within 15 miles and can’t get an appointment within 15 working days
         miam_access_mediator_nearby: There is no authorised family mediator with an office within 15 miles of your home
-        misc_access_prohibited: You or any of the other people in this application (the respondents) are in prison or any other institution, subject to bail conditions that prevent contact with each other or subject to a licence that prohibits contact with each other
-        misc_non_resident: You or the other people in this application (the respondents) don’t live in England and Wales
         misc_applicant_under_age: The applicant or any of the other people in this application (the respondents) are under 18 years old
         misc_none: *none_selected
 
@@ -331,7 +322,7 @@ en:
       answers:
         <<: *YESNO
     domestic_abuse:
-      question: Have you ever suffered or are you at risk of suffering domestic violence or abuse?
+      question: Have you ever suffered or are you at risk of suffering domestic abuse?
       answers:
         <<: *YESNO
     other_abuse:
