RST-6283 revert unwanted change in c1a

--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -94,7 +94,7 @@ en:
         details: Application under section 8 of the Children Act 1989 for a child arrangements, prohibited steps, specific issue order or to vary or discharge or ask permission to make a section 8 order
       c1a_form:
         title: C1A
-        details: Allegations of harm and domestic abuse (Supplemental information form)
+        details: Allegations of harm and domestic violence (Supplemental information form)
       c8_form:
         title: C8
         details: Confidential contact details - Family Procedure Rules 2010 Rule 29.1
