--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -314,6 +314,8 @@ en:
       question: Details of exemptions from attending a MIAM
     exemption_reasons:
       question: Reasons for not providing evidence for a MIAM exemption
+    exemption:
+      question: Evidence for a MIAM exemption
     attach_evidence:
       question: Are you or the prospective party able to provide the required evidence to support a MIAM exemption claim?
       answers:
