--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -973,7 +973,6 @@ en:
               <li>Why the prospective applicant is not able to attend a MIAM online or by video-link and an explanation of why this is the case</li>
               <li>The names, postal addresses and telephone numbers or e-mail addresses for authorised family mediators, and the dates of contact</li>
             </ul>
-
       exemption_reasons:
         edit:
           page_title: Reasons for not providing evidence for a MIAM exemption
@@ -987,8 +986,24 @@ en:
           alert_text: Please change your response and attach the required evidence if you are able to so. You have stated that you have evidence of domestic violence or abuse.
           answers:
             <<: *YESNO
-            
-
+      exemption_upload:
+        edit:
+          page_title: Upload your evidence for a MIAM exemption
+          lead_text_html: |
+            <p>If you are uploading documents from a computer, name the files clearly. For example, miam-certificate.pdf</p>
+            <p>Files must end with JPG, BMP, PNG, TIF, PDF, DOC or DOCX</p>
+          dropdown_header: How to take a picture of a document on your phone and upload it
+          dropdown_content_html: |
+            <ol>
+              <li>Place your document on a flat service in a well-lit room. Use a flash if you need to.</li>
+              <li>Take a picture of the whole document. You should be able to see its edges.</li>
+              <li>Check you can read all the writing, including the handwriting.</li>
+              <li>Email or send the photo or scan to the device you are using now.</li>
+              <li>Upload it here.</li>
+            </ol>
+          attach_document_html: "<strong>Select document to upload</strong>"
+          upload_explanation_html: |
+            <p class="govuk-body">Your document will upload when you click 'Continue'.</p>
       reasons_playback:
         show:
           page_title: You don’t have to attend a MIAM
