RST-6499 Styling PDF for exemption reasons/details (#1559)
* RST-6499 Styling PDF for exemption reasons/details

* typo

* RST-6499 Hide exemption reasons/details if no value

--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -411,6 +411,7 @@ en:
     exemption:
       question: *details
       answer: "[ File(s) uploaded with application ]"
+      absence_answer: *not_applicable
     permission_sought:
       question: Have you applied to the court for permission to make this application?
       answers:
